cookbook/docs/demos/jenkins/deploy/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: devops-mcm-demo
  name: jenkins-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  rules:
  - http:
      paths:
      - path: /jenkins
        backend:
          serviceName: jenkins
          servicePort: 8080
